# azure-latency-mcp

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/skills/azure-pricing/: SKILL.md
.claude/skills/azure-pricing/scripts/: query_vm_pricing.py
.github/: copilot-instructions.md
src/azure_latency_mcp/: __init__.py  latency_tester.py  models.py  server.py
