[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "azure-latency-mcp"
version = "1.0.0"
description = "MCP server for testing Azure region latency"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Emre" }
]
keywords = ["azure", "latency", "mcp", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "azure-identity>=1.15.0",
    "azure-mgmt-resource>=23.0.0",
    "azure-mgmt-storage>=21.0.0",
    "azure-mgmt-subscription>=3.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
azure-latency-mcp = "azure_latency_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/azure_latency_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
]
